# Halvora

./: .gitignore  Cargo.toml  README.md
Halvora_Logo/: Halvora.psd  halvoralogo.psd  uitheme.psd
docs/superpowers/plans/: 2026-07-23-line-chart.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/: main.rs
src/modules/: mod.rs
src/modules/api/: mod.rs
src/modules/api/bit_stamp/: candle_sync.rs  mod.rs  ws.rs
src/modules/api/mempool/rest/: halve_blocks.rs  mod.rs
src/modules/app_data_dir/: mod.rs
src/modules/compute/: coins_issued.rs  halving_eta.rs  mod.rs  price_stats.rs  vwap.rs  year_over_year.rs
src/modules/ui/: mod.rs  scaling.rs  theme.rs
src/modules/ui/line_chart/: axis.rs  line_chart.rs  mod.rs  state.rs
src/modules/ui/mainwindow/: application.rs  mod.rs
src/modules/ui/mainwindow/dashboard_layout/: dashboard.rs  metric_labels.rs  mod.rs
src/modules/ui/mainwindow/sidebar/: blockchain_sidebar.rs  halving_sidebar.rs  mod.rs
src/modules/ui/volume_chart/: axis.rs  mod.rs  state.rs  volume_chart.rs
