[package]
name = "halvora"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
iced = { version = "0.14.0", features = ["image", "tokio"] }
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "rustls"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.150"
