[package]
name = "halvora"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
futures-util = "0.3.33"
iced = { version = "0.14.0", features = ["image", "tokio", "canvas"] }
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "rustls"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.150"
chrono = "0.4"
tokio = { version = "1.53.1", features = ["time", "rt", "net", "macros"] }
tokio-tungstenite = { version = "0.30.0", features = ["rustls-tls-webpki-roots"] }
